--- a/index.html
+++ b/index.html
@@ -449,13 +449,13 @@ Ref.</br>
   <!--<img src="images/rg.png" style="max-width:1.2in; position: center " >  -->
    </a> 
     </br>
-   <a href="https://arxiv.org/find/all/1/au:+Gupta%5fSiddhartha/0/1/0/all/0/1"> 
+   <!--<a href="https://arxiv.org/find/all/1/au:+Gupta%5fSiddhartha/0/1/0/all/0/1"> -->
+   <a href="https://arxiv.org/search/advanced?advanced=&terms-0-operator=AND&terms-0-term=%22Siddhartha+Gupta%22&terms-0-field=all&classification-physics=y&classification-physics_archives=astro-ph&classification-include_cross_list=include&date-year=&date-filter_by=date_range&date-from_date=2016&date-to_date=2025&date-date_type=submitted_date&abstracts=show&size=50&order=-announced_date_first">
    <!-- <img src="images/arxiv.png" style="max-width:0.8in; position: center " >  -->
    arXiv
    </br>
    </a>
-   <a href=
-"https://ui.adsabs.harvard.edu/search/filter_author_facet_hier_fq_author=AND&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FGupta%2C%20S%2FGupta%2C%20Siddhartha%22&fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FGupta%2C%20S%2FGupta%2C%20Siddhartha%22)&fq_database=database%3A%20astronomy&q=pubdate%3A%5B2016-01%20TO%202023-12%5D%20author%3A(%22%5EGupta%2C%20Siddhartha%22)&sort=date%20desc%2C%20bibcode%20desc&p_=0">  <!--  <img src="images/nasaads.png" style="max-width:0.8in; position: center " >  -->
+   <a href="https://ui.adsabs.harvard.edu/search/filter_author_facet_hier_fq_author=AND&filter_author_facet_hier_fq_author=author_facet_hier%3A%221%2FGupta%2C%20S%2FGupta%2C%20Siddhartha%22&fq=%7B!type%3Daqp%20v%3D%24fq_database%7D&fq=%7B!type%3Daqp%20v%3D%24fq_author%7D&fq_author=(author_facet_hier%3A%221%2FGupta%2C%20S%2FGupta%2C%20Siddhartha%22)&fq_database=database%3A%22astronomy%22&q=pubdate%3A%5B2016-01%20TO%202025-12%5D%20author%3A(%22Gupta%2C%20Siddhartha%22)&sort=date%20desc%2C%20bibcode%20desc&p_=0">
   NASA ADS
    </a> 
    </br>
