--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ Ref.</br>
    <intro>
    <ul>
       <iframe width=50% controls 
-      src="https://youtu.be/OEdYnshvKPQ">
+      src="https://www.youtube.com/watch?v=OEdYnshvKPQ">
       </iframe>
       <!-- <div class="text" style="position: lower-left; padding:0.5em; width:50%; font-size:12.5px" > A</div> -->
    </ul>
