--- a/index.html
+++ b/index.html
@@ -412,10 +412,13 @@ Ref.</br>
    <h3> <a name=""></a><font color="#e74c3c">"Return Currents in Shocks", presented at AAS Journal Author Series</font></h3>
    <intro>
    <ul>
-      <iframe width=50% controls 
+      <!--<iframe width=50% controls 
       src="https://www.youtube.com/watch?v=OEdYnshvKPQ">
-      </iframe>
+      </iframe> -->
       <!-- <div class="text" style="position: lower-left; padding:0.5em; width:50%; font-size:12.5px" > A</div> -->
+
+      <iframe width=50% src="https://www.youtube.com/embed/OEdYnshvKPQ?si=ekc_J8k4r-rBDkzZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
    </ul>
    </intro>
    <!--  simulation end -->
