--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ Ref.</br>
    <!--  simulation end -->
 
    <!-- Simulation  2 -->
-   <h3> <a name=""></a><font color="#e74c3c">Streaming Instability, presented at APS DPP Meeting 2021</font></h3>
+   <h3> <a name=""></a><font color="#e74c3c">"Streaming Instability", presented at APS DPP Meeting 2021</font></h3>
    <intro>
    <ul>
       <video width=50% controls>
