--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <button href="#research" class="dropbtn" onclick="openTab(event, 'Research')" >Research</button>
     <div class="dropdown-content">
       <a href="#research_interests" class="dropbtn" onclick="openTab(event, 'Research')" >Interests</a>
-      <!-- <a href="#research_collaborators" class="dropbtn" onclick="openTab(event, 'Research')" >Collaborators</a>-->
+      <a href="#research_collaborators" class="dropbtn" onclick="openTab(event, 'Research')" >Collaborators</a>
       <a href="#research_summary" class="dropbtn" onclick="openTab(event, 'Research')">Projects</a>
       <a href="#research_onlinetalks" class="dropbtn" onclick="openTab(event, 'Research')" >Talks</a>
       <a href="#research_presentation" class="dropbtn" onclick="openTab(event, 'Research')" >Posters</a>
@@ -277,18 +277,19 @@ I began my academic journey at National School, followed by primary education (c
     <li>Gravity</li>
   </ul>  
 
-  <!---
+  
   <h3> <a name="research_collaborators"></a><font color="#e74c3c">Collaborators</font> </h3>
-  <a href="https://astro.uchicago.edu/~caprioli/" >Damiano Caprioli (Postdoc advisor)</a>, University of Chicago, IL, USA.</br> 
-  <a href="">David Eichler</a>, Ben-Gurion University, Israel.</br> 
-  <a href="https://colbyhaggerty.com/" >Colby Haggerty</a>, University of Hawaii, USA</br>
-  <a href="http://personalpages.to.infn.it/~mignone/">Andrea Mignone</a>, University of Torino, Italy.</br>
-  <a href="http://www.rri.res.in/~biman/"> Biman Nath (PhD advisor)</a>, Raman Research Insitute Bangalore, India.</br>
-  <a href="http://www.physics.iisc.ernet.in/~prateek/" >Prateek Sharma (PhD advisor)</a>, Indian Institute of Science Bangalore, India.</br>
-  <a href="">Yuri Shchekinov</a>, Lebedev Physical Institute Moscow, Russia.</br>
-  <a href="https://www.astro.princeton.edu/~anatoly/">Anatoly Spitkovsky (Postdoc advisor)</a>, Princeton University, NJ, USA.</br>
-  <p> 
-   -->
+  I am grateful to have learned from and collaborated with distinguished scientists across diverse areas of physics. Here, I introduce them in the order I first met them. 
+<a href="http://www.rri.res.in/~biman/">Biman Nath</a> (PhD supervisor at Raman Research Insitute Bangalore, India); 
+<a href="http://www.physics.iisc.ernet.in/~prateek/">Prateek Sharma</a> (PhD supervisor at Indian Institute of Science Bangalore, India); 
+<a href="">Yuri Shchekinov</a> (Lebedev Physical Institute Moscow, Russia);
+<a href="">David Eichler</a> (Collaborator at Ben-Gurion University, Israel);
+<a href="http://personalpages.to.infn.it/~mignone/">Andrea Mignone</a> (University of Torino, Italy); 
+<a href="https://astro.uchicago.edu/~caprioli/" >Damiano Caprioli</a> (Postdoc advisor at University of Chicago, USA); and
+<a href="https://www.astro.princeton.edu/~anatoly/">Anatoly Spitkovsky</a> (Postdoc advisor, Princeton University, NJ, USA).</br>
+
+I have also been fortunate to work with and discuss ideas with colleagues: <a href="https://colbyhaggerty.com/" >Colby Haggerty</a> (faculty at University of Hawaii, USA); <a href="https://rebeccadiesing.com/">Rebecca Diesing</a> (postdoc at the Institute for Advanced Study in Princeton).
+ <p> 
 
  <h3> <a name="research_summary"></a><font color="#e74c3c">Research Projects</font> </h3>
   To know my contributions, click on the tabs below.
