--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ I began my academic journey at National School, followed by primary education (c
    <intro>
    I have broad research interests, though my work so far has primarily focused on
    <ul>
-    <li>Kinetic Plasmas</li>
+    <li>Kinetic plasmas</li>
     <li>Cosmic rays </li>
     <li>Galaxy evolution</li>
     <li>Numerical methods</li>
