--- a/SHAKTI/shakti.html
+++ b/SHAKTI/shakti.html
@@ -134,10 +134,11 @@ html {
 
    <div class="slideshow-container" style="float:left; padding:1em; max-width:39%;max-height:35%;">
      <video width=100% controls loop>
-      <source src="video/weibel_z.mp4"  type="video/mp4">
+      <source src="video/weibel.mp4"  type="video/mp4">
     </video>
-    <div class="text" style="float: right; padding:0.1em; font-size:12.5px" > 
+    <div class="text" style="float: right; padding:0.1em; font-size:10.5px" > 
     The production of magnetic field due to counter-streaming electron-positron pair plasma. The result is obtained from the Shakti code.
+    The blue and red circles represent electrons and positrons, respectively.
     Grid distribution is 200x200, with two particles per cell per species and using a second-order shape function for each particle.
     </div> 
 
