--- a/SHAKTI/shakti.html
+++ b/SHAKTI/shakti.html
@@ -137,9 +137,9 @@ html {
       <source src="video/weibel.mp4"  type="video/mp4">
     </video>
     <div class="text" style="float: right; padding:0.1em; font-size:10.5px" > 
-    The production of magnetic field due to counter-streaming electron-positron pair plasma. The result is obtained from the Shakti code.
+    The production of magnetic field due to counter-streaming electron-positron pair plasma beam. The result is obtained from the Shakti code.
     The blue and red circles represent electrons and positrons, respectively.
-    Grid distribution is 200x200, with two particles per cell per species and using a second-order shape function for each particle.
+    Grid distribution is 200x200, where each cell has 8 particles per cell per species in each beam. A second-order shape function for each particle is used for current deposition.
     </div> 
 
    </div>
